2007-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang:

	Highlight compiler directives.

2007-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/spec.lang:

	RPM spec lang by Konstantin Ryabitsev.

=== gtksourceview 1.8.3 ===

2006-12-13  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.3

2007-01-08  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/ocaml.lang:

	ocaml lang file by Eric Cooper (Bug #338344)

2007-01-02  Joachim Noreiko  <jnoreiko@yahoo.com>

	* gtksourceview/language-specs/docbook.lang: split keywords list
	to have under 250 elements. (Workaround for #110991.)

2006-12-26  Joachim Noreiko  <jnoreiko@yahoo.com>

	* gtksourceview/language-specs/docbook.lang: 
	* gtksourceview/language-specs/Makefile.am:

	added DocBook lang file

2006-12-13  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/ada.lang:
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/cpp.lang:
	* gtksourceview/language-specs/csharp.lang:
	* gtksourceview/language-specs/desktop.lang:
	* gtksourceview/language-specs/diff.lang:
	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/perl.lang:
	* gtksourceview/language-specs/php.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/python.lang:
	* gtksourceview/language-specs/ruby.lang:
	* gtksourceview/language-specs/sh.lang:
	* gtksourceview/language-specs/tcl.lang:
	* gtksourceview/language-specs/xml.lang: mime-types cleanup (see 
	bug #352549)

=== gtksourceview 1.8.2 ===

2006-12-13  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/configure.in:
	* gtksourceview/README:
	* gtksourceview/NEWS:

	release 1.8.2
	
2006-12-11  Paolo Maggi  <paolo@gnome.org>
